@@ -9,9 +9,21 @@ then
 fi
 
 
+echo "Removing old steamLatest directory."
+
 rm -rf steamLatest
 
+
+echo "Extracting steamLatest.tar.gz"
 tar xzf steamLatest.tar.gz
 
 
 steamcmd +login "jasonrohrergames" +run_app_build -desc OneLifeClient_windows_v$1 ~/checkout/OneLifeWorking/build/steam/app_build_windows_ON_SERVER_595690.vdf +quit | tee /tmp/steamBuildLog.txt
+
+
+echo "About to run AHAP Steam Depot Build script"
+echo ""
+echo -n "Hit [ENTER] when ready: "
+read
+
+./runWindowsSteamDepotBuildAHAP.sh $1
